[gd_scene load_steps=2 format=2]

[ext_resource path="res://HUD/HUD.gd" type="Script" id=1]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Health" type="Label" parent="HBoxContainer"]
margin_top = 13.0
margin_right = 46.0
margin_bottom = 27.0
text = "Health:"

[node name="HealthValue" type="Label" parent="HBoxContainer"]
margin_left = 50.0
margin_top = 13.0
margin_right = 50.0
margin_bottom = 27.0

[node name="Out of " type="Label" parent="HBoxContainer"]
margin_left = 54.0
margin_top = 13.0
margin_right = 59.0
margin_bottom = 27.0
text = "/"

[node name="MaxHealth" type="Label" parent="HBoxContainer"]
margin_left = 63.0
margin_top = 13.0
margin_right = 71.0
margin_bottom = 27.0
text = "5"

[node name="Wave" type="Label" parent="HBoxContainer"]
margin_left = 75.0
margin_top = 13.0
margin_right = 168.0
margin_bottom = 27.0
text = "Wave number:"

[node name="WaveValue" type="Label" parent="HBoxContainer"]
margin_left = 172.0
margin_top = 13.0
margin_right = 180.0
margin_bottom = 27.0
text = "1"

[node name="Enemies" type="Label" parent="HBoxContainer"]
margin_left = 184.0
margin_top = 13.0
margin_right = 277.0
margin_bottom = 27.0
text = "Enemies alive:"

[node name="EnemyValue" type="Label" parent="HBoxContainer"]
margin_left = 281.0
margin_top = 13.0
margin_right = 289.0
margin_bottom = 27.0
text = "1"
